# jaust

./: .gitignore  B.java  Cargo.toml  Example.java  README.md  justfile
src/: debug_utils.rs  lib.rs  main.rs
src/class_file/: README.md  access_flags.rs  attributes.rs  bytecode.rs  code_attribute.rs  constant_pool.rs  fields.rs  file_reader.rs  interfaces.rs  javap_printer.rs  methods.rs  mod.rs
src/class_file/attributes/: attributes.rs  bootstrap_methods_attribute.rs  code_attribute.rs  deprecated_attribute.rs  exceptions_attribute.rs  generic_attribute.rs  inner_classes_attribute.rs  line_number_table_attribute.rs  method_parameters_attribute.rs  mod.rs  record_attribute.rs  runtime_visible_annotations_attribute.rs  signature_attribute.rs  source_file_attribute.rs  stack_map_table_attribute.rs
src/class_file/jaustp/: jaustp_summary.rs  mod.rs  parse_method_descriptor.rs  print_code.rs  signature.rs
test_files/: EnumTest.java  Example.java  RecordTest.java
tests/: jaustp_test.rs
