[package]
name = "jaust"
version = "0.1.1"
edition = "2021"
description = "Java ecosystem tools in rust a learning project"
license = "MIT"
documentation = "https://docs.rs/jaust"
repository = "https://github.com/glazari/jaust"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
